# CP_Project_55906_67535

./: .gitignore  CMakeLists.txt
include/: histogram_eq.h  histogram_eq_par.h
outputDataset/: borabora_1_1.ppm  input01_1000.ppm
scripts/: run.sh
src/: histogram_eq.cpp  histogram_eq_cud.cu  histogram_eq_par.cpp  main.cpp
test/: CMakeLists.txt  cuda_test_batch.cpp  histogram_eq_par_test.cpp  histogram_eq_test.cpp
